k3s/ai-server/telegraf-ai.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: telegraf-ai
  namespace: sara
spec:
  selector:
    matchLabels:
      app: telegraf-ai
  template:
    metadata:
      labels:
        app: telegraf-ai
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: telegraf
          image: telegraf:1.38-alpine
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf/telegraf.conf
              subPath: telegraf.conf
            - name: hostfs
              mountPath: /hostfs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: telegraf-config-ai
        - name: hostfs
          hostPath:
            path: /
